package utils.XML;

/**
 *
 * @author CLEMENT Aimeric
 */
abstract public class XMLSubtool{
    
    protected final XMLTool generalTool;
    
    public XMLSubtool(XMLTool generalTool){
        this.generalTool= generalTool;
    }
}
