package utils.error;

/**
 *
 * @author CLEMENT Aimeric
 */
public class XMLWriteException extends Exception {

    /**
     * Constructs an instance of <code>XMLReadException</code>
     * @param info
     */
    public XMLWriteException(String info) {
        super(info);
    }
}
