package utils.error;

/**
 *
 * @author CLEMENT Aimeric
 */
public class ForceQuitException extends Exception{

    /**
     * Creates a new instance of <code>ForceQuit</code> without detail message.
     */
    public ForceQuitException(){
    }
}
