package utils.error;

/**
 *
 * @author CLEMENT Aimeric
 */
public class XMLReadException extends Exception {

    /**
     * Constructs an instance of <code>XMLReadException</code>
     * @param info
     */
    public XMLReadException(String info) {
        super(info);
    }
}
